--- a/Trabajo2/entrega2.Rmd
+++ b/Trabajo2/entrega2.Rmd
@@ -22,6 +22,7 @@ library(ggpubr)
 library(kableExtra)
 library(hrbrthemes)
 library(viridis)
+library(scales)
 ```
 
 ```{r}
@@ -29,7 +30,8 @@ library(viridis)
 bdInternet <- read.csv("BD_Completa.csv", encoding = "UTF-8")
 
 bdInternet <- bdInternet %>%
-  mutate(TEST_DATE = as.POSIXct(strptime(TEST_DATE, "%m/%d/%Y %H:%M:%S")))
+  mutate(TEST_DATE = as.POSIXct(strptime(TEST_DATE, "%m/%d/%Y %H:%M")),
+         DATE_ = as.Date(format(TEST_DATE, format = "%m/%d/%Y"), "%m/%d/%Y"))
 
 bdInternet <- bdInternet %>%
   mutate(TEST_HOUR = ifelse(format(TEST_DATE, format = "%H") %in% c("08", "09"), 9,
@@ -51,25 +53,123 @@ tempLatencia %>%
 ```
 ```{r}
 propVelocidades <- bdInternet %>%
-  mutate(PROPORTION = DOWNLOAD_INDICATOR/UPLOAD_INDICATOR) %>%
-  select(TEST_HOUR, PROPORTION)
+  group_by(DATE_, TEST_HOUR) %>%
+  summarise(#PROM_DOWN = mean(DOWNLOAD_INDICATOR),
+            #PROM_UP = mean(UPLOAD_INDICATOR),
+            PROPORTION = DOWNLOAD_INDICATOR/UPLOAD_INDICATOR) %>%
+  select(DATE_, TEST_HOUR, PROPORTION)
 ```
 
 ```{r}
-propVelocidades %>%
-  filter(TEST_HOUR == 9) %>%
-  ggplot(aes(x=TEST_HOUR,
-             y=PROPORTION,
-             fill=TEST_HOUR)) +
-    geom_boxplot() +
-    scale_fill_viridis(discrete = F, alpha=0.6, option="A") +
-    theme_ipsum() +
-    theme(#legend.position="none",
-          plot.title = element_text(size=11),
-          axis.text.x = element_text(angle = 50, vjust = 0.5, hjust=1)) +
-    ggtitle("Diagrama de cajas y bigotes. Tiempo de recuperación menor a 30 días.") +
-    xlab("") + ylab("Tiempo de recuperación (días)")
+ggplot(filter(propVelocidades, TEST_HOUR == 9), aes(x=DATE_, y=PROPORTION)) +
+  ylim(0,2.5)+
+  scale_x_date(date_breaks = "1 day", 
+                 labels=date_format("%a"),
+                 limits = as.Date(c('2021/07/28','2021/08/03')))+
+  labs(title="Proporción entre velocidad de bajada y subida\na la hora 9.",
+       x="Fecha", y="Proporción") +
+  theme(axis.text.x = element_text(vjust = 0.5, hjust=1)) +
+  geom_point() +
+  geom_smooth(method=lm , color="red", fill="#69b3a2", se=TRUE)
+
+filter(propVelocidades, TEST_HOUR == 9) %>%
+  group_by(DATE_) %>%
+  summarise(desv = sd(PROPORTION), prom=mean(PROPORTION)) %>% 
+  kbl() %>%  kable_styling()
 ```
+```{r}
+ggplot(filter(propVelocidades, TEST_HOUR == 14), aes(x=DATE_, y=PROPORTION)) +
+  ylim(0,2.5)+
+  scale_x_date(date_breaks = "1 day", 
+                 labels=date_format("%a"),
+                 limits = as.Date(c('2021/07/28','2021/08/03')))+
+  labs(title="Proporción entre velocidad de bajada y subida\na la hora 14.",
+       x="Fecha", y="Proporción") +
+  theme(axis.text.x = element_text(vjust = 0.5, hjust=1)) +
+  geom_point() +
+  geom_smooth(method=lm , color="red", fill="#69b3a2", se=TRUE)
+
+filter(propVelocidades, TEST_HOUR == 14) %>%
+  group_by(DATE_) %>%
+  summarise(desv = sd(PROPORTION), prom=mean(PROPORTION)) %>% 
+  kbl() %>%  kable_styling()
+```
+```{r}
+ggplot(filter(propVelocidades, TEST_HOUR == 19), aes(x=DATE_, y=PROPORTION)) +
+  ylim(0,2.5)+
+  scale_x_date(date_breaks = "1 day", 
+                 labels=date_format("%a"),
+                 limits = as.Date(c('2021/07/28','2021/08/03')))+
+  labs(title="Proporción entre velocidad de bajada y subida\na la hora 19.",
+       x="Fecha", y="Proporción") +
+  theme(axis.text.x = element_text(vjust = 0.5, hjust=1)) +
+  geom_point() +
+  geom_smooth(method=lm , color="red", fill="#69b3a2", se=TRUE)
+
+filter(propVelocidades, TEST_HOUR == 19) %>%
+  group_by(DATE_) %>%
+  summarise(desv = sd(PROPORTION), prom=mean(PROPORTION)) %>% 
+  kbl() %>%  kable_styling()
+```
+```{r}
+dbProviders <- bdInternet %>%
+  group_by(PROVIDER, DATE_) %>%
+  summarise(promDown = mean(DOWNLOAD_INDICATOR),
+            promUp = mean(UPLOAD_INDICATOR)) %>%
+  ungroup()
+
+prov1 <- dbProviders %>%
+  filter(PROVIDER == "Tigo")
+prov2 <- dbProviders %>%
+  filter(PROVIDER == "Movistar")
+```
+```{r}
+plot(prov1$DATE_, prov1$promDown, type = "l",
+     frame = FALSE,
+     main="Histórico contagios entre\n22-09-2020 y 08-03-2021 por cada grupo etario",
+     xlab = "Fecha",
+     ylab = "Casos reportados",
+     col = "#FF0000",
+     #xlim=c(as.Date("01-09-2020", "%d-%m-%Y"), as.Date("15-03-2021", "%d-%m-%Y")),
+     ylim=c(0.5,1.5), lwd=2)
+
+lines(prov2$DATE_, prov2$promDown,
+      col = "#0000FF", type = "l", lwd=2)
+
+legend("topleft", legend=c("Tigo", "Movistar"),
+       col=c("#FF0000", "#0000FF"), lty = 1:1, cex=0.8, lwd=4)
+```
+
+```{r}
+plot(prov1$DATE_, prov1$promUp, type = "l",
+     frame = FALSE,
+     main="Histórico contagios entre\n22-09-2020 y 08-03-2021 por cada grupo etario",
+     xlab = "Fecha",
+     ylab = "Casos reportados",
+     col = "#FF0000",
+     #xlim=c(as.Date("01-09-2020", "%d-%m-%Y"), as.Date("15-03-2021", "%d-%m-%Y")),
+     ylim=c(0.5,2.25), lwd=2)
+
+lines(prov2$DATE_, prov2$promUp,
+      col = "#0000FF", type = "l", lwd=2)
+
+legend("topleft", legend=c("Tigo", "Movistar"),
+       col=c("#FF0000", "#0000FF"), lty = 1:1, cex=0.8, lwd=4)
+```
+```{r}
+bdInternet %>%
+  group_by(PROVIDER) %>%
+  summarise(promDown = mean(DOWNLOAD_INDICATOR),
+            desvDown = sd(DOWNLOAD_INDICATOR),
+            promUp = mean(UPLOAD_INDICATOR),
+            desvUp = sd(UPLOAD_INDICATOR))
+```
+```{r}
+plot_correlate(select(bdInternet, LATENCY_MS, DISTANCE_MILES))
+plot_correlate(select(bdInternet, DOWNLOAD_INDICATOR, DISTANCE_MILES))
+plot_correlate(select(bdInternet, UPLOAD_INDICATOR, DISTANCE_MILES))
+```
+
 
 
 
